--- a/src/FloralHub.Florist.Infrastructure/FloralHub.Florist.Infrastructure.csproj
+++ b/src/FloralHub.Florist.Infrastructure/FloralHub.Florist.Infrastructure.csproj
@@ -1,3 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <ProjectReference Include="..\FloralHub.Florist.Core\FloralHub.Florist.Core.csproj" />
+  </ItemGroup>
 </Project>
