--- a/.editorconfig
+++ b/.editorconfig
@@ -157,6 +157,8 @@ dotnet_diagnostic.CA1304.severity = none
 dotnet_diagnostic.CA1712.severity = warning
 # Identifiers should not match keywords
 dotnet_diagnostic.CA1716.severity = warning
+# Identifier contains type name
+dotnet_diagnostic.CA1720.severity = silent
 # Type names should not match namespaces
 dotnet_diagnostic.CA1724.severity = warning
 # Mark members as static
